# QTStudy

ClionDemos/A4HelloWorld/: CMakeLists.txt  main.cpp
ClionDemos/A4HelloWorld/Forms/: mainwindow.ui
ClionDemos/A4HelloWorld/Headers/: mainwindow.h
ClionDemos/A4HelloWorld/Sources/: mainwindow.cpp
ClionDemos/OpenGLDemo0/: CMakeLists.txt
ClionDemos/OpenGLDemo0/Sources/: AXBOpenGLWidget.cpp
ClionDemos/OpenGLDemo1/: CMakeLists.txt
ClionDemos/OpenGLDemo1/Forms/: mainwindow.ui
ClionDemos/OpenGLDemo1/Headers/: AXBOpenGLWidget.h  mainwindow.h
ClionDemos/OpenGLDemo1/Sources/: AXBOpenGLWidget.cpp  mainwindow.cpp
ClionDemos/OpenGLDemo10/: CMakeLists.txt
ClionDemos/OpenGLDemo10/Resource/Shaders/: shaders.frag  shaders.vert
ClionDemos/OpenGLDemo10/Source/: AXBOpenGLWidget.cpp
ClionDemos/OpenGLDemo2/: CMakeLists.txt
ClionDemos/OpenGLDemo2/Forms/: mainwindow.ui
ClionDemos/OpenGLDemo2/Headers/: AXBOpenGLWidget.h
ClionDemos/OpenGLDemo2/Sources/: AXBOpenGLWidget.cpp  mainwindow.cpp
ClionDemos/OpenGLDemo3/: CMakeLists.txt
ClionDemos/OpenGLDemo3/Headers/: AXBOpenGLWidget.h
ClionDemos/OpenGLDemo3/Sources/: AXBOpenGLWidget.cpp
ClionDemos/OpenGLDemo4/: CMakeLists.txt
ClionDemos/OpenGLDemo4/Resource/: res.qrc
ClionDemos/OpenGLDemo4/Resource/Shaders/: shaders.frag  shaders.vert
ClionDemos/OpenGLDemo4/Source/: AXBOpenGLWidget.cpp
ClionDemos/OpenGLDemo5/: CMakeLists.txt
ClionDemos/OpenGLDemo5/Header/: AXBOpenGLWidget.h
ClionDemos/OpenGLDemo5/Resource/Shaders/: shaders.vert
ClionDemos/OpenGLDemo5/Source/: AXBOpenGLWidget.cpp
ClionDemos/OpenGLDemo6/: main.cpp
ClionDemos/OpenGLDemo6/Resource/: res.qrc
ClionDemos/OpenGLDemo6/Resource/Shaders/: shaders.frag
ClionDemos/OpenGLDemo6/Source/: AXBOpenGLWidget.cpp
ClionDemos/OpenGLDemo7/: CMakeLists.txt
ClionDemos/OpenGLDemo7/Header/: AXBOpenGLWidget.h  mainwindow.h
ClionDemos/OpenGLDemo7/Resource/: res.qrc
ClionDemos/OpenGLDemo7/Resource/Shaders/: shaders.frag  shaders.vert
ClionDemos/OpenGLDemo7/Source/: AXBOpenGLWidget.cpp
ClionDemos/OpenGLDemo8/: CMakeLists.txt
ClionDemos/OpenGLDemo8/Header/: AXBOpenGLWidget.h
ClionDemos/OpenGLDemo8/Resource/: res.qrc
ClionDemos/OpenGLDemo8/Resource/Shaders/: shaders.frag  shaders.vert
ClionDemos/OpenGLDemo8/Source/: AXBOpenGLWidget.cpp
ClionDemos/OpenGLDemo9/: CMakeLists.txt
ClionDemos/OpenGLDemo9/Resource/: res.qrc
ClionDemos/OpenGLDemo9/Resource/Shaders/: shaders.vert
ClionDemos/OpenGLDemo9/Source/: AXBOpenGLWidget.cpp  mainwindow.cpp
QTCDemos/A4HelloWorld/: CMakeLists.txt  axbopenglwidget.cpp  axbopenglwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QTCDemos/untitled/: CMakeLists.txt  res.qrc
QTDemos/Demo1/: CMakeLists.txt  main.cpp
QTDemos/Demo1/Headers/: ifmetwindow.h
QTDemos/Demo1/Sources/: ExPerson.cpp  exwidget.cpp  ifmetwindow.cpp  mainwindow.cpp
QTDemos/Demo1/Sources/Forms/: exwidget.ui  ifmetwindow.ui  mainwindow.ui
QTDemos/Demo1/Sources/Headers/: ExPerson.h  exwidget.h  ifmetwindow.h  mainwindow.h
QTDemos/Demo1/Ui/: ifmetwindow.ui
Test/VSCode/: CMakeLists.txt
VSCodeDemos/: CMakeLists.txt  main.cpp
VSCodeDemos/Forms/: MainWindow.ui
VSCodeDemos/Headers/: MainWindow.h
